# Vexidus

./: README.md  START HERE.md
Vexidus Smart Contracts/: README.md
Vexidus Validator/: Guide.md  README.md  SETUP_GUIDE.md
Vexidus Validator/genesis/: genesis_vxs.json
Vexidus Validator/sdk/: Cargo.toml
Vexidus Validator/sdk/src/: address_utils.rs  bundle.rs  client.rs  config.rs  dex.rs  intent.rs  intent_parser.rs  keypair.rs  lib.rs  wallet.rs  wallet_client.rs
