[package]
name = "vexidus-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Vexidus SDK — validator tools, wallet management, transaction building"

[dependencies]
# Workspace
vexidus-types = { path = "../core/types" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

# Crypto
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"

# Serialization
borsh = { workspace = true }

# Intent parsing
regex = "1"

# Config
toml = "0.8"

# HTTP client for RPC
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tempfile = { workspace = true }
env_logger = { workspace = true }
